# face-detection

./: CMakeLists.txt  README.md  detect-image.cpp  face-detection.cpp  face-detection.h  makefile  unittest.cpp
src/: face-detection.cpp  face-detection.h  facedetectcnn-model.cpp  facedetectcnn.cpp
